# jobagent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
docs/: PRD.md  architecture.md  design-briefs.md
docs/decisions/: 001-no-linkedin-scraping.md  002-offers-not-applications.md  003-hybrid-stack.md  004-three-tier-submission.md  005-five-pipeline-tabs.md  006-no-multi-llm-abstraction.md  README.md
services/apply/: Dockerfile  pyproject.toml
services/apply/src/apply/: config.py  main.py
services/apply/src/apply/api/: applications.py  deps.py  drafts.py  submit.py
services/apply/src/apply/db/: models.py  session.py
services/apply/src/apply/schemas/: apply.py
services/apply/src/apply/services/: draft_generator.py  resume_tailor.py
services/apply/src/apply/services/submission/: base.py  greenhouse.py  lever.py  playwright_submitter.py  router.py
services/apply/tests/: conftest.py  test_draft_generator.py  test_resume_tailor.py
services/auth/: Dockerfile  build.gradle
services/discovery/: Dockerfile  build.gradle
services/matcher/: Dockerfile  build.gradle
services/profile/: Dockerfile  build.gradle
services/tracker/: Dockerfile
web/: Dockerfile  auth.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Analytics.tsx  App.tsx  Atoms.tsx  Dashboard.tsx  JobDetail.tsx  JobsFeed.tsx  Kanban.tsx  Onboarding.tsx  ReviewQueue.tsx  Settings.tsx  Sidebar.tsx  TopBar.tsx  data.ts  types.ts
web/lib/: api.ts  format.ts  server-auth.ts
(+152 files in other folders)
